Added some more semi-broken css

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,63 +1,56 @@
 .App {
   text-align: center;
-  background-color:darkolivegreen;
+  background-color:#98B66E;
+  height:100vh;
 }
 
-.bg-primary {
-  background-color: darkgreen
+.c1 {
+  background-color: #FBE39D;
+  color:black;
 }
-.bg-secondary {
-  background-color: lightgreen
+.c2 {
+  background-color: #F9D876;
+  color:black;
+}
+.c3 {
+  background-color: #C5E5A5;
+  color:black;
+}
+.c4 {
+  background-color: #98B66E;
+  color:black;
+}
+
+.b1 {
+  margin-bottom:1%;
+}
+
+.navButton {
+  border-radius: 10px;
+  margin-left: 2%;
+  margin-right: 2%;
 }
 
 .parsnip {
   border-radius:100%;
-  background-color: lightgreen;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .leaderboard {
+  overflow: hidden;
   overflow-y: scroll;
   max-height:90vh;
 }
 
-.box {
-  padding:5pt;
-  border-radius:25pt;
-}
-
-.user-stats {
-  margin:5pt;
-
-}
-
-.user-data {
-  margin:5pt
-}
-
 .powerup {
-  background-color:aquamarine;
   overflow-y:scroll;
+  overflow:hidden;
+  border-radius:20px;
   max-height:90vh;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.powerupElement {
+  border-radius:30px;
+  margin:2%;
 }
 
 img {
@@ -69,15 +62,22 @@ img {
 }
 
 @keyframes blow-up-parsnip {
-    0% { transform: scale(1); /*Initial scale 100%*/}
-    50% { transform: scale(1.1);  /*Increased scale to 110%*/}
-    100% { transform: scale(1); /*Back to scale 100%*/}
+  0% { transform: scale(1); /*Initial scale 100%*/}
+  50% { transform: scale(1.1);  /*Increased scale to 110%*/}
+  100% { transform: scale(1); /*Back to scale 100%*/}
 }
 
 .parsnip-animation:active {
-    animation: blow-up-parsnip 0.1s ease-in-out; 
+  animation: blow-up-parsnip 0.1s ease-in-out; 
 }
 
-body {
-  background-color:darkolivegreen;
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
